# python-pdm-monorepo-test-project

./: README.md  projects.code-workspace
common/: pyproject.toml
common/utils/: test_utils.py
projects/test_backend/: pyproject.toml
projects/test_backend/test_common_imports/: test_imports.py
