[project]
name = "common"
version = "0.0.1"
description = ""
authors = [
    {name = "jujumilk3", email = "jujumilk3@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
