[project]
name = "test_backend"
version = "0.0.1"
description = ""
authors = [
    {name = "jujumilk3", email = "jujumilk3@gmail.com"},
]
dependencies = [
    "common @ file:///${PROJECT_ROOT}/../../common",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.dependencies]
common = {path = "${PROJECT_ROOT}/../../common", develop = true}